# prepkit

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
app/api/: main.py
app/api/routes/: questions.py
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  models.py
backend/app/alembic/versions/: b9e08a809be0_init.py
backend/app/api/routes/: questions.py  reviews.py  tags.py
backend/app/core/: config.py  db.py  security.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/questions/: page.tsx
frontend/app/reviews/: page.tsx
frontend/components/: Nav.tsx
frontend/lib/: api.ts  types.ts
