[project]
name = "app"
version = "0.1.0"
description = "Interview question management API with spaced repetition"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "python-multipart>=0.0.27",
    "email-validator>=2.3.0",
    "tenacity>=9.1.0",
    "pydantic>=2.13.0,<3.0.0",
    "emails>=1.1.1",
    "jinja2>=3.1.6",
    "alembic>=1.18.0",
    "httpx>=0.28.0",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.38",
    "pydantic-settings>=2.14.0,<3.0.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "pyjwt>=2.12.0,<3.0.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "prek>=0.3.11",
    "coverage>=7.13.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py314"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
